renamed project to reflect convertion to cloudkit

--- a/mySimpleJournalCloudKit.xcodeproj/xcshareddata/xcschemes/mySimpleJournal.xcscheme
+++ b/mySimpleJournalCloudKit.xcodeproj/xcshareddata/xcschemes/mySimpleJournal.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "0F46C06523C68B370090F02D"
                BuildableName = "mySimpleJournal.app"
                BlueprintName = "mySimpleJournal"
-               ReferencedContainer = "container:mySimpleJournal.xcodeproj">
+               ReferencedContainer = "container:mySimpleJournalCloudKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,7 +47,7 @@
             BlueprintIdentifier = "0F46C06523C68B370090F02D"
             BuildableName = "mySimpleJournal.app"
             BlueprintName = "mySimpleJournal"
-            ReferencedContainer = "container:mySimpleJournal.xcodeproj">
+            ReferencedContainer = "container:mySimpleJournalCloudKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -64,7 +64,7 @@
             BlueprintIdentifier = "0F46C06523C68B370090F02D"
             BuildableName = "mySimpleJournal.app"
             BlueprintName = "mySimpleJournal"
-            ReferencedContainer = "container:mySimpleJournal.xcodeproj">
+            ReferencedContainer = "container:mySimpleJournalCloudKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
